--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "husky": "^9.1.4",
-    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "prisma": "^5.18.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   }
 }
