--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
@@ -48,6 +49,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "prisma": "^5.18.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.18.0"
   }
 }
